--- a/cooperacion-web/src/main/webapp/app/ut/infod.xhtml
+++ b/cooperacion-web/src/main/webapp/app/ut/infod.xhtml
@@ -131,9 +131,6 @@
                             </p:outputLabel>
                         </div>
                     </div>
-                </div>
-
-                <div class="p-col-12 p-xl-6">
                     <div class="p-formgroup-inline">
                         <div class="p-field">
                             <p:outputLabel value="Tipo de Cooperación:" />
@@ -160,6 +157,9 @@
                             <f:convertNumber pattern="#,##0"/>
                         </p:outputLabel>
                     </h:panelGrid>
+                </div>
+
+                <div class="p-col-12 p-xl-6">
                     <h:panelGrid style="width: 100%;" columns="1">
                         <p:outputLabel value="Tipos Beneficiarios" />
                         <h:panelGrid columns="3" style="width: 100%">
@@ -198,10 +198,26 @@
                             </p:outputPanel>
                         </h:panelGrid>
                     </h:panelGrid>
+
+                    <p:dataTable class="invoice-to" value="#{infodView.lstArchivos}" var="archivo">
+                        <p:column headerText="Nombre">
+                            <p:outputLabel value="#{archivo.nombreArchivo}"/>
+                        </p:column>
+                        <p:column headerText="# Pág." width="40" style="text-align: center;">
+                            <p:outputLabel value="#{archivo.numeroPaginas}"/>
+                        </p:column>
+                        <p:column width="20">   
+                            <h:commandLink styleClass="rounded-button blue" style="font-weight:bold">
+                                <i class="pi pi-download"></i>
+                                <f:setPropertyActionListener value="#{archivo.nombreArchivo}" target="#{infodView.nombreArchivo}" />
+                                <p:fileDownload contentDisposition="inline" value="#{infodView.file}"/>
+                            </h:commandLink>
+                        </p:column>
+                    </p:dataTable>
                 </div>
             </div>
         </div>
-        <div class="card" style="display:#{(infodView.codigoBueno)?'block':'none'}">
+        <div jsf:id="dvBotones" class="card" style="display:#{(infodView.codigoBueno)?'block':'none'}">
             <div class="products-buttonbar">
                 <div style="width: 100%">
                     <p:commandButton value="Cambiar estado" icon="pi pi-check" onclick="PF('dlgCambioEstado').show();" process="@this"
@@ -270,7 +286,7 @@
             <p:outputPanel id="eventDetails" styleClass="ui-fluid">
                 <div class="p-field">
                     <p:outputLabel for="title" value="Título" />
-                    <p:inputText id="title" value="#{infodView.event.title}" required="true" />
+                    <p:inputText id="title" value="#{infodView.event.title}" required="false" />
                 </div>
                 <div class="p-field">
                     <p:outputLabel for="from" value="Desde" />
@@ -282,7 +298,7 @@
                 </div>
                 <div class="p-field">
                     <p:outputLabel for="lugar" value="Lugar" />
-                    <p:inputText id="lugar" value="#{infodView.event.description}" required="true" />
+                    <p:inputText id="lugar" value="#{infodView.event.description}" required="false" />
                 </div>
             </p:outputPanel>
             <f:facet name="footer">
@@ -315,8 +331,8 @@
             </p:outputPanel>
 
             <f:facet name="footer">
-                <p:commandButton value="Guardar" action="#{infodView.guardarCambioEstado()}" icon="pi pi-check" oncomplete="PF('myschedule').update();PF('dlgCambioEstado').hide();" 
-                                 update="tblFechas" process="@this,cboEstado, txaObservacion"/>
+                <p:commandButton value="Guardar" action="#{infodView.guardarCambioEstado()}" icon="pi pi-check" oncomplete="PF('dlgCambioEstado').hide();" 
+                                 update="dvBotones" process="@this,cboEstado, txaObservacion"/>
                 <p:commandButton value="Cancelar" onclick="PF('dlgCambioEstado').hide();"/>
             </f:facet>
         </p:dialog>   
