--- a/cooperacion-web/src/main/webapp/app/listadoProyectos.xhtml
+++ b/cooperacion-web/src/main/webapp/app/listadoProyectos.xhtml
@@ -225,6 +225,14 @@
         </p:dialog> 
 
         <p:dialog id="dlgMap" widgetVar="dlgMap" header="Ubicación del Centro Educativo" width="1150" height="550">
+            <h:panelGrid columns="2">
+                <p:outputLabel value="Cooperante: "/>
+                <p:selectOneMenu value="#{listadoView.idCooperante}">
+                    <f:selectItem itemValue="0" itemLabel="Seleccione un valor"/>
+                    <f:selectItems value="#{listadoView.lstCooperantePorProyecto}" var="coo" itemValue="#{coo.idCooperante}" itemLabel="#{coo.nombreCooperante}" />
+                    <p:ajax listener="#{listadoView.recuperarLstProyectosPorCooperante()}" update="mapa" />
+                </p:selectOneMenu>
+            </h:panelGrid>
             <p:gmap id="mapa" center="#{listadoView.posicionInicial}" zoom="9" type="ROADMAP" style="width: 100%; height: 500px;" 
                     model="#{listadoView.simpleModel}" mapTypeControl="false" >
                 <p:ajax event="overlaySelect" listener="#{listadoView.onMarkerSelect}" />
