--- a/cooperacion-web/src/main/webapp/app/listadoProyectos.xhtml
+++ b/cooperacion-web/src/main/webapp/app/listadoProyectos.xhtml
@@ -75,6 +75,21 @@
                 height: 28px;
                 width: 28px;
             }
+
+            body .ui-datatable .ui-datatable-header {
+                background: #F8F9FA;
+                border: 1px solid rgba(57, 132, 184, 0.1);
+                border-top-width: 1px;
+                border-right-width: 1px;
+                border-bottom-width: 1px;
+                border-left-width: 1px;
+                border-width: 0 0 1px 0;
+                color: #64686A;
+                padding: 0rem;
+                font-weight: 700;
+                border-top-left-radius: 4px;
+                border-top-right-radius: 4px;
+            }
         </style>
     </ui:define>
 
@@ -254,6 +269,12 @@
                 <p:selectOneMenu value="#{listadoView.idCooperante}">
                     <f:selectItem itemValue="0" itemLabel="TODOS LOS COOPERANTES"/>
                     <f:selectItems value="#{listadoView.lstCooperantePorProyecto}" var="coo" itemValue="#{coo.idCooperante}" itemLabel="#{coo.nombreCooperante}" />
+                    <p:ajax listener="#{listadoView.recuperarLstProyectosPorCooperante()}" update="mapa" />
+                </p:selectOneMenu>
+                <p:outputLabel value="Año: "/>
+                <p:selectOneMenu value="#{listadoView.anho}">
+                    <f:selectItem itemValue="0" itemLabel="TODOS LOS AÑOS"/>
+                    <f:selectItems value="#{listadoView.lstAnhosProyectos}" var="anho" itemValue="#{anho.atributo}" itemLabel="#{anho.valor}" />
                     <p:ajax listener="#{listadoView.recuperarLstProyectosPorCooperante()}" update="mapa" />
                 </p:selectOneMenu>
             </h:panelGrid>
